[package]
name = "easy_salt"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/DarkEclipse847/easy_salt"
description = "Simple crate for generating hashed strings with salt, currently based on easy-hasher crate"
authors = ["DarkEclipse847"]

keywords = ["hash", "salt", "crypthography"]
[dependencies]
easy-hasher = "2.2.1"
rand = "0.8.4"
